--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production --watch"
+
   },
   "repository": {
     "type": "git",
@@ -22,7 +24,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@babel/preset-react": "^7.9.4"
+    "@babel/preset-env": "^7.10.0",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "nodemon": "^2.0.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "keywords": [],
   "description": ""
