--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --watch"
-
+    "build": "webpack --mode production --watch",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
