--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@babel/preset-env": "^7.10.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^2.1.0",
     "nodemon": "^2.0.4",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
